# koda

./: .gitignore  CHANGELOG.md  CLAUDE.md  COMPACT_COMPARISON.md  COMPETITIVE_ANALYSIS.md  Cargo.toml  DESIGN.md  FUTURE.md  MCP_PLAN.md  README.md  RELEASE_NOTES.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
agents/: default.json  releaser.json  reviewer.json  security.json  testgen.json
docs/: security.md  user-guide.md
koda-ast/: Cargo.toml  README.md
koda-ast/src/: ast.rs  lib.rs  main.rs
koda-ast/tests/: mcp_integration_test.rs
koda-cli/: Cargo.toml  README.md
koda-cli/src/: acp_adapter.rs  app.rs  bottom_bar.rs  commands.rs  completer.rs  confirm.rs  cost.rs  diff_render.rs  display.rs  headless.rs  headless_sink.rs  highlight.rs  input.rs  interrupt.rs  lib.rs  main.rs  md_render.rs  onboarding.rs  repl.rs  select_menu.rs  server.rs  sink.rs  startup.rs  tool_history.rs  tui_app.rs  tui_commands.rs  tui_context.rs  tui_handlers_commands.rs  tui_handlers_idle.rs  tui_handlers_inference.rs  tui_history.rs  tui_output.rs  tui_render.rs  tui_types.rs  tui_viewport.rs  tui_wizards.rs
koda-cli/src/widgets/: approval.rs  dropdown.rs  file_menu.rs  help_overlay.rs  mod.rs  model_menu.rs  provider_menu.rs  session_menu.rs  slash_menu.rs  status_bar.rs  text_input.rs
koda-cli/tests/: regression_test.rs  server_test.rs  smoke_test.rs
koda-core/: Cargo.toml  README.md
koda-core/agents/: default.json  planner.json  releaser.json  scout.json  testgen.json  verifier.json
koda-core/skills/code-review/: SKILL.md
koda-core/skills/security-audit/: SKILL.md
koda-core/src/: agent.rs  approval.rs  bash_path_lint.rs  bash_safety.rs  capabilities.md  compact.rs  config.rs  db.rs  delegation.rs  escalation.rs  git.rs  inference.rs  inference_helpers.rs  intent.rs  intervention_observer.rs  keystore.rs  lib.rs  loop_guard.rs  model_context.rs  model_probe.rs  model_tier.rs  output_caps.rs  persistence.rs  preview.rs  progress.rs  prompt.rs  review.rs  runtime_env.rs  session.rs  settings.rs  skills.rs  sub_agent_cache.rs  task_phase.rs  task_signature.rs  tier_observer.rs  tool_dispatch.rs  truncate.rs  undo.rs  version.rs
koda-core/src/engine/: event.rs  mod.rs  sink.rs
koda-core/src/mcp/: capability_registry.rs  client.rs  config.rs  mod.rs  registry.rs
koda-core/src/providers/: anthropic.rs  gemini.rs  mock.rs  mod.rs  openai_compat.rs  stream_collector.rs  stream_tag_filter.rs  think_tag_filter.rs
koda-core/src/tools/: agent.rs  ast.rs  discover.rs  file_tools.rs  glob_tool.rs  grep.rs  mod.rs  recall.rs  shell.rs  skill_tools.rs  todo.rs  web_fetch.rs
koda-core/tests/: cancel_test.rs  capabilities_test.rs  e2e_test.rs  guarantee_matrix_test.rs  inference_recovery_test.rs  new_tools_test.rs  perf_test.rs  purge_test.rs  session_test.rs  token_audit.rs  tool_wiring_test.rs
koda-email/: Cargo.toml  README.md
koda-email/src/: config.rs  imap_client.rs  lib.rs  main.rs  smtp_client.rs
koda-email/tests/: mcp_integration_test.rs
src/: app.rs  approval.rs  capabilities.md  clipboard.rs  config.rs  confirm.rs  db.rs  display.rs  inference.rs  input.rs  keystore.rs  loop_guard.rs  main.rs  preview.rs  repl.rs  runtime_env.rs
src/mcp/: client.rs  config.rs  registry.rs
src/providers/: anthropic.rs  gemini.rs  mod.rs  openai_compat.rs
src/tools/: agent.rs  file_tools.rs  mod.rs  shell.rs  todo.rs
tests/: cli_test.rs  new_tools_test.rs  regression_test.rs
tests/manual/: auto-provision-mcp.md
