[package]
name = "koda-cli"
version = "0.1.2"
edition = "2024"
description = "A high-performance AI coding agent built in Rust"
license = "MIT"
repository = "https://github.com/lijunzh/koda"
homepage = "https://github.com/lijunzh/koda"
readme = "../README.md"
keywords = ["ai", "coding-agent", "llm", "cli", "rust"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Lijun Zhu"]

[[bin]]
name = "koda"
path = "src/main.rs"

[dependencies]
# Core engine
koda-core = { path = "../koda-core", version = "0.1.2" }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Serialization (needed for CLI-level config)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# TUI / Terminal (0.28 required for ratatui 0.29 / tui-textarea 0.7 compatibility)
crossterm = { version = "0.28", features = ["event-stream"] }

# Syntax highlighting
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "parsing", "html", "regex-fancy"] }
once_cell = "1"

# TUI (inline viewport: input + status bar)
ratatui = { version = "0.29", default-features = false, features = ["crossterm", "scrolling-regions"] }
tui-textarea = "0.7"

# Logging (subscriber for CLI configuration)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1"

# Base64 encoding (for image input)
base64 = "0.22"
agent-client-protocol-schema = { version = "0.11", features = ["unstable_session_model", "unstable_session_list", "unstable"] }
tokio-tungstenite = "0.28"
futures-util = "0.3.32"
rpassword = "7.4.0"

[dev-dependencies]
tempfile = "3"
koda-core = { path = "../koda-core", features = ["test-support"] }
serde_json = "1"

