[package]
name = "koda-email"
version = "0.1.9"
edition = "2024"
description = "MCP server for email read/send/search via IMAP/SMTP — part of the koda ecosystem"
license = "MIT"

[[bin]]
name = "koda-email"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.1", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
schemars = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
imap = "3.0.0-alpha.15"
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder", "smtp-transport"] }
mail-parser = "0.11"

[dev-dependencies]
tempfile = "3"
